# CCBHC_Measurements

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
ccbhc_measurements/: __init__.py
ccbhc_measurements.egg-info/: PKG-INFO  SOURCES.txt
ccbhc_measurements/abstractions/: denominator.py  measurement.py  numerator.py  submeasure.py
ccbhc_measurements/compat/: typing_compat.py
ccbhc_measurements/dashboard/: CCBHC Measurements Dashboard.pbix
ccbhc_measurements/dashboard/excel files/: ASC_sub_1.xlsx  ASC_sub_1_stratification.xlsx  ASC_sub_2.xlsx  ASC_sub_2_stratification.xlsx  CDF_AD_sub_1.xlsx  CDF_AD_sub_1_stratification.xlsx  CDF_CH_sub_1.xlsx  CDF_CH_sub_1_stratification.xlsx  DEP_REM_sub_1.xlsx  DEP_REM_sub_1_stratification.xlsx  SDOH_sub_1.xlsx  SDOH_sub_1_stratification.xlsx
ccbhc_measurements/dashboard/images/: Thumbs.db
ccbhc_measurements/demos/: ASC.md  CDF-AD.md  CDF-CH.md  CDF_AD.md  CDF_CH.md  DEP-REM.md  SDOH.md  asc_sub_1_demo.py  asc_sub_2_demo.py  cdf_ad_demo.py  cdf_ch_demo.py  dep_rem_demo.py  main_demo.py  sdoh_demo.py
ccbhc_measurements/diagrams/: Thumbs.db
ccbhc_measurements/measurements/: MEASUREMENTS.md  asc.py  cdf_ad.py  cdf_ch.py  dep_rem.py  sdoh.py
ccbhc_measurements/strategies/: alcohol_screening_strategies.py
ccbhc_measurements/validation/: required_data.py  schemas.py  validation_factory.py  validator.py
